hpa.yaml
apiVersion: v1
kind: Service
metadata:
  name: hpa-example
spec:
  selector:
    app: hpa-example
  ports:
  - port: 80
---
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: hpa-example
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hpa-example
    spec:
      containers:
      - name: hpa-example
        image: gcr.io/google-containers/hpa-example
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
