ingress.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  name: echoserver
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: gcr.io/google-containers/echoserver:1.6
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
spec:
  type: NodePort
  selector:
    app: echoserver
  ports:
  - port: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
  name: gce-ingress
spec:
  rules:
  - host: kube.0angelic0.com
    http:
      paths:
      - backend:
          serviceName: echoserver
          servicePort: 8080
        path: /*
  tls:
  - secretName: kube-0angelic0-com-tls
    hosts:
    - kube.0angelic0.com
